--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "ndjson-manip"
-dynamic = ["version"]
+version = "0.1.0"
 description = "OpenSearch NDJSON Unpacker"
 readme = "README.md"
 requires-python = ">=3.8"
